Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9941

lsm_is_composite() isn't right

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.11.0, Lustre 2.10.2
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      static inline bool lsm_is_composite(__u32 magic)
      {
              return !!(magic & LOV_MAGIC_COMP_V1);
      }
      

      it's not right, magic contains LOV_MAGIC_MAGIC also will be regarded as composite magic.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: