lustre/lov/lov_internal.h
@@ -92,7 +92,7 @@ static inline bool lsm_entry_inited(const struct lov_stripe_md *lsm, int index)
 
 static inline bool lsm_is_composite(__u32 magic)
 {
-	return !!(magic & LOV_MAGIC_COMP_V1);
+	return magic == LOV_MAGIC_COMP_V1;
 }
 
 static inline size_t lov_comp_md_size(const struct lov_stripe_md *lsm)
